services and service requests added

--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -44,7 +44,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./userlist.html">
+                            <a class="nav-link" href="listusers.php">
                                 <i class="material-icons">
                                     person
                                 </i>
